--- a/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
@@ -59,13 +59,13 @@
 							<p:message id="cityMessage" for="city" />
 						</aui:field>
 						<aui:field id="provinceIdField" label="#{i18n['state-province']}">
-							<h:selectOneMenu id="provinceId" label="#{i18n['state-province']}" required="true"
+							<p:selectOneMenu id="provinceId" label="#{i18n['state-province']}" required="true"
 								value="#{applicantModelBean.provinceId}">
 								<f:selectItem itemLabel="#{i18n['select']}" itemValue="" />
 								<f:selectItems itemValue="#{province.provinceId}" itemLabel="#{province.provinceName}"
 									value="#{listModelBean.provinces}" var="province" />
 								<p:ajax update="provinceIdField" />
-							</h:selectOneMenu>
+							</p:selectOneMenu>
 							<p:message id="provinceIdMessage" for="provinceId" />
 						</aui:field>
 						<aui:field id="postalCodeField" label="#{i18n['zip-postal']}">
@@ -81,15 +81,13 @@
 				<aui:fieldset>
 					<aui:column>
 						<aui:field id="commentsField" label="#{i18n['comments']}">
-							<h:panelGroup id="showHide" layout="block">								
-								<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
-									rendered="#{!applicantViewBean.commentsRendered}" value="#{i18n['show']} #{i18n['comments']}">
-										<p:ajax update="commentsField"/>
-								</h:commandLink>
-								<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
-									rendered="#{applicantViewBean.commentsRendered}" value="#{i18n['hide']} #{i18n['comments']}">
-									<p:ajax update="commentsField"/>
-								</h:commandLink>
+							<h:panelGroup id="showHide" layout="block">
+								<p:commandLink actionListener="#{applicantViewBean.toggleComments}"
+									immediate="true" rendered="#{!applicantViewBean.commentsRendered}"
+									value="#{i18n['show']} #{i18n['comments']}" update="commentsField" />
+								<p:commandLink actionListener="#{applicantViewBean.toggleComments}"
+									immediate="true" rendered="#{applicantViewBean.commentsRendered}"
+									value="#{i18n['hide']} #{i18n['comments']}" update="commentsField" />
 							</h:panelGroup>
 							<p:inputTextarea id="comments" cols="50" rows="10" rendered="#{applicantViewBean.commentsRendered}"
 								value="#{applicantModelBean.comments}">
