--- a/demos/bridge/liferayfaces4-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/liferayfaces4-portlet/src/main/webapp/views/applicant.xhtml
@@ -117,11 +117,11 @@
             <alloy:row>
                 <alloy:column id="c2a" styleClass="uploaded-files">
 					<alloy:form id="f2">
-						<alloy:dialog clientKey="dialogKey" dismissible="true">
+						<alloy:dialog clientKey="dialogKey" dismissible="true" headerText="#{i18n['confirm']}">
 							<alloy:field styleClass="dialog-content">
 								<alloy:outputText value="#{i18n['are-you-sure-you-want-to-delete-this']}" />
 							</alloy:field>
-							<alloy:commandButton actionListener="#{applicantBackingBean.deleteFile}" value="#{i18n['yes']}">
+							<alloy:commandButton actionListener="#{applicantBackingBean.deleteUploadedFile}" value="#{i18n['yes']}">
 								<f:ajax render="@form" />
 							</alloy:commandButton>
 							<alloy:button onclick="Liferay.component('dialogKey').hide();" value="#{i18n['no']}" />
@@ -133,6 +133,7 @@
 									onclick="Liferay.component('dialogKey').show();">
 									<alloy:icon name="trash" />
 									<f:ajax />
+									<f:setPropertyActionListener value="#{uploadedFile.id}" target="#{applicantViewBean.uploadedFileId}" />
 								</alloy:commandButton>
 							</alloy:column>
 							<alloy:column>
@@ -152,9 +153,10 @@
 					<hr />
                     <alloy:form id="f3" enctype="multipart/form-data">
                         <alloy:inputFile fileUploadListener="#{applicantBackingBean.handleFileUpload}"
-							multiple="multiple">
-                        </alloy:inputFile>
-                        <alloy:commandButton value="#{i18n['submit']}" />
+							multiple="multiple" />
+                        <alloy:commandButton value="#{i18n['submit']}">
+							<f:ajax execute="@form" render="c2a" />
+						</alloy:commandButton>
                     </alloy:form>
                 </alloy:column>
             </alloy:row>
