FACES-1896 Develop alloy:button, alloy:commandButton, and alloy:icon component (removed sub-menu feature)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/menu/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/menu/commandButton.xhtml
@@ -4,7 +4,7 @@
 	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Styling sub-menus via the label attribute -->
+		<!-- Example 1: Creating menus via the alloy:menu tag -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-commandbutton-menu-example-1']}" number="1">
 				<alloy:commandButton>
