--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/menu/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/menu/button.xhtml
@@ -4,7 +4,7 @@
 	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Creating menus via the menu tag -->
+		<!-- Example 1: Creating menus via the alloy:menu tag -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-button-menu-example-1']}" number="1">
 				<alloy:button includeViewParams="true">
