FACES-2039 portal:header and portal:buttonRow components

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/header/general/header.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/header/general/header.xhtml
@@ -1,19 +1,26 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:portal="http://liferay.com/faces/portal" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/templates/component-2col.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:portal="http://liferay.com/faces/portal"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: When escapeXml is false, markup is not escaped. This is true by default. -->
+		<!-- Example 1: Specifying an internationalized key (provided by the portal) for the title attribute. -->
 		<showcase:example description="#{i18n['portal-header-general-example-1']}" number="1">
-			<portal:header escapeXml="false" title="#{i18n['escapexml-is-false']}" />
-			<portal:header title="#{i18n['escapexml-is-true']}" />
+			<portal:header title="home" />
 		</showcase:example>
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: The backURL and backLabel attributes can be used to create a link and its label, respectively. -->
+		<!-- Example 2: Specifying an EL expression for the title attribute. -->
 		<showcase:example description="#{i18n['portal-header-general-example-2']}" number="2">
-			<portal:header backURL="/" backLabel="#{i18n['navigation']}" title="#{i18n['header-text']}" />
+			<portal:header title="#{i18n['header-text']}" />
+		</showcase:example>
+	</ui:define>
+
+	<ui:define name="col3">
+		<!-- Example 3: Specifying the backLabel and backURL attributes to define the hyperlink for the back icon. -->
+		<showcase:example description="#{i18n['portal-header-general-example-3']}" number="3">
+			<portal:header backLabel="#{i18n['navigation']}" backURL="javascript:history.go(-1);"
+				title="#{i18n['header-text']}" />
 		</showcase:example>
 	</ui:define>
 
