FACES-2005 Develop alloy:video component FACES-2034 Develop alloy:audio component

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/graceful-degradation/video.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/graceful-degradation/video.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<showcase:example>
+		<showcase:example description="#{i18n['alloy-video-graceful-degradation-example-1']}" number="1">
 			<alloy:video styleClass="showcase-video" contentType="video/mp4" controls="true"
 				flashPlayer="#{resource['liferay-faces-alloy:aui/video/player.swf']}"
 				value="#{resource['videos:example.mp4']}">
