--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/general/audio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/general/audio.xhtml
@@ -1,14 +1,44 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/templates/component-1col-60.xhtml">
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	template="/templates/component-4col.xhtml">
 
+	<!-- Example 1: Context-relative path to a resource via the value attribute -->
 	<ui:define name="col1">
 		<alloy:form>
-			<showcase:example renderedCheckbox="true">
-				<alloy:icon name="warning-sign" />
-				<alloy:outputText value="Example Under Construction" />
+			<showcase:example description="#{i18n['alloy-audio-general-example-1']}" number="1" renderedCheckbox="true">
+				<alloy:audio styleClass="showcase-audio" contentType="audio/mp3" controls="true"
+					value="/resources/audios/example.mp3" rendered="#{showcaseModelBean.selectedComponent.rendered}" />
 			</showcase:example>
 		</alloy:form>
+	</ui:define>
+
+	<!-- Example 2: JSF resource via the #{resource} EL keyword -->
+	<ui:define name="col2">
+		<showcase:example description="#{i18n['alloy-audio-general-example-2']}" number="2">
+			<alloy:audio styleClass="showcase-audio" contentType="audio/ogg"
+				controls="true" degrade="false" value="#{resource['audios:example.ogg']}">
+				<alloy:outputText value="#{i18n['please-visit-this-website-with-an-up-to-date-browser']}" />
+			</alloy:audio>
+		</showcase:example>
+	</ui:define>
+
+	<!-- Example 3: JSF resource via the Alloy Resource component -->
+	<ui:define name="col3">
+		<showcase:example description="#{i18n['alloy-audio-general-example-3']}" number="3">
+			<alloy:audio styleClass="showcase-audio" controls="true" degrade="false"
+				value="#{audioBacking.oggAudio}">
+				<alloy:outputText value="#{i18n['please-visit-this-website-with-an-up-to-date-browser']}" />
+			</alloy:audio>
+		</showcase:example>
+	</ui:define>
+
+	<!-- Example 4: JSF resource via the library and name attributes -->
+	<ui:define name="col4">
+		<showcase:example description="#{i18n['alloy-audio-general-example-4']}" number="4">
+			<alloy:audio styleClass="showcase-audio" controls="true" degrade="false" library="audios" name="example.ogg">
+				<alloy:outputText value="#{i18n['please-visit-this-website-with-an-up-to-date-browser']}" />
+			</alloy:audio>
+		</showcase:example>
 	</ui:define>
 
 </ui:composition>
