FACES-1979 Replace aui: tags with alloy: tags for Liferay Faces Demos in 4.2.x/3.2.x/2.2.x branches

--- a/demos/bridge/icefaces3-compat-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/icefaces3-compat-portlet/src/main/webapp/views/applicant.xhtml
@@ -81,7 +81,7 @@
 									<f:ajax />
 								</ice:inputTextarea>
 							</alloy:field>
-						</alloy:col>
+						</alloy:column>
 					</alloy:row>
 				</alloy:fieldset>
 				<hr />
