--- a/demos/portal/primefaces5-users-portlet/src/main/webapp/views/users.xhtml
+++ b/demos/portal/primefaces5-users-portlet/src/main/webapp/views/users.xhtml
@@ -2,7 +2,7 @@
 <ui:composition xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:liferay-ui="http://liferay.com/faces/ui" xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:portal="http://liferay.com/faces/portal">
 
 	<h:form id="f1" styleClass="aui-form">
 		<h:messages globalOnly="true" layout="table" />
