--- a/demos/portal/primefaces4-users-portlet/src/main/webapp/views/users.xhtml
+++ b/demos/portal/primefaces4-users-portlet/src/main/webapp/views/users.xhtml
@@ -2,13 +2,13 @@
 <ui:composition xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:liferay-ui="http://liferay.com/faces/ui" xmlns:p="http://primefaces.org/ui"
-	xmlns:portal="http://liferay.com/faces/portal" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:portal="http://liferay.com/faces/portal">
 
 	<h:form id="f1" styleClass="aui-form">
 		<h:messages globalOnly="true" layout="table" />
 		<h:panelGroup layout="block" rendered="#{usersViewBean.formRendered}">
 			<alloy:row>
-				<alloy:column first="true" width="15">
+				<alloy:column width="15">
 					<alloy:fieldset label="#{i18n['personal']}">
 						<alloy:field id="firstNameField" label="#{i18n['first-name']}">
 							<p:inputText id="firstName" required="true" value="#{usersModelBean.selectedUser.firstName}" />
