FACES-2148 jsf2-flows-portlet utilizes non-existent alloy:layout component tag

--- a/demos/bridge/jsf2-flows-portlet/src/main/webapp/views/portletViewMode.xhtml
+++ b/demos/bridge/jsf2-flows-portlet/src/main/webapp/views/portletViewMode.xhtml
@@ -15,7 +15,7 @@
 			</h:commandButton>
 		</h:form>
 		<br />
-		<alloy:layout>
+		<alloy:row>
 			<alloy:column>
 				<ul>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['JSF']}" /></em></li>
@@ -29,6 +29,6 @@
 					<li><em><h:outputText value="surveyFlowModelBeanInScope=#{scopeTrackingBean.surveyFlowModelBeanInScope}" /></em></li>
 				</ul>
 			</alloy:column>
-		</alloy:layout>
+		</alloy:row>
 	</h:body>
 </f:view>
