FACES-2149 jsf2-html5-portlet utilizes non-existent alloy:layout component tag

--- a/demos/bridge/jsf2-html5-portlet/src/main/webapp/views/portletViewMode.xhtml
+++ b/demos/bridge/jsf2-html5-portlet/src/main/webapp/views/portletViewMode.xhtml
@@ -7,7 +7,7 @@
 		<ui:include src="styling.xhtml" />
 		<ui:include src="applicant.xhtml" />
 		<br />
-		<alloy:layout>
+		<alloy:row>
 			<alloy:column>
 				<ul>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['JSF']}" /></em></li>
@@ -15,6 +15,6 @@
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['Liferay Faces Bridge']}" /></em></li>
 				</ul>
 			</alloy:column>
-		</alloy:layout>
+		</alloy:row>
 	</h:body>
 </f:view>
