--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/lazy/dataTable.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/lazy/dataTable.xhtml
@@ -3,10 +3,35 @@
 	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-1col-80.xhtml">
 
 	<ui:define name="col1">
-		<alloy:form>
-			<showcase:example renderedCheckbox="true">
-				<alloy:icon name="warning-sign" />
-				<alloy:outputText value="Example Under Construction" />
+		<alloy:form id="myForm">
+			<showcase:example id="ex1" renderedCheckbox="true">
+				<alloy:messages globalOnly="true" layout="table" />
+				<alloy:dataTable id="customerTable" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+					rows="#{dataTableBacking.rowsPerPage}" value="#{dataTableBacking.customerOnDemandDataModel}"
+					var="customer">
+					<f:facet name="header">
+						<alloy:outputText value="#{i18n['customers']}" />
+						<alloy:paginator>
+							<f:ajax execute="@form" render="@form" />
+						</alloy:paginator>
+					</f:facet>
+					<alloy:column headerText="#{i18n['first-name']}">
+						<alloy:outputText value="#{customer.firstName}" />
+					</alloy:column>
+					<alloy:column headerText="#{i18n['last-name']}">
+						<alloy:outputText value="#{customer.lastName}" />
+					</alloy:column>
+					<alloy:column headerText="#{i18n['date-of-birth']}">
+						<alloy:outputText value="#{customer.dateOfBirth}">
+							<f:convertDateTime pattern="MMM dd, yyyy" />
+						</alloy:outputText>
+					</alloy:column>
+					<alloy:column headerText="#{i18n['country']}">
+						<alloy:outputText value="#{customer.countryId}">
+							<f:converter converterId="convertCountry" />
+						</alloy:outputText>
+					</alloy:column>
+				</alloy:dataTable>
 			</showcase:example>
 		</alloy:form>
 	</ui:define>
