--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/sort-single-column/dataTable.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/sort-single-column/dataTable.xhtml
@@ -5,7 +5,6 @@
 	<ui:define name="col1">
 		<alloy:form id="myForm">
 			<showcase:example id="ex1" renderedCheckbox="true">
-				<alloy:messages globalOnly="true" layout="table" />
 				<alloy:dataTable id="customerTable" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					rows="#{dataTableBacking.rowsPerPage}" value="#{dataTableBacking.customerOnDemandDataModel}"
 					var="customer">
@@ -15,16 +14,19 @@
 							<f:ajax execute="@form" render="@form" />
 						</alloy:paginator>
 					</f:facet>
-					<alloy:column headerText="#{i18n['first-name']}">
+					<alloy:column headerText="#{i18n['first-name']}" sortBy="#{customer.firstName}">
 						<alloy:outputText value="#{customer.firstName}" />
+						<f:ajax render="customerTable" />
 					</alloy:column>
-					<alloy:column headerText="#{i18n['last-name']}">
+					<alloy:column headerText="#{i18n['last-name']}" sortBy="#{customer.lastName}">
 						<alloy:outputText value="#{customer.lastName}" />
+						<f:ajax render="customerTable" />
 					</alloy:column>
-					<alloy:column headerText="#{i18n['date-of-birth']}">
+					<alloy:column headerText="#{i18n['date-of-birth']}" sortBy="#{customer.dateOfBirth}">
 						<alloy:outputText value="#{customer.dateOfBirth}">
 							<f:convertDateTime pattern="MMM dd, yyyy" />
 						</alloy:outputText>
+						<f:ajax render="customerTable" />
 					</alloy:column>
 					<alloy:column headerText="#{i18n['country']}">
 						<alloy:outputText value="#{customer.countryId}">
