--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
@@ -5,8 +5,16 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:commandButton
-					action="/views/component.xhtml?faces-redirect=true&amp;componentPrefix=alloy&amp;componentName=commandbutton&amp;componentUseCase=navigation&amp;foo=1234">
+				<alloy:field label="#{i18n['ajax']}">
+					<alloy:selectOneMenu value="#{commandBackingBean.ajax}">
+						<f:selectItem itemLabel="true" itemValue="true" />
+						<f:selectItem itemLabel="false" itemValue="false" />
+						<f:ajax render="nav" />
+					</alloy:selectOneMenu>
+				</alloy:field>
+				<alloy:commandButton id="nav"
+					action="/views/component.xhtml?faces-redirect=true&amp;componentPrefix=alloy&amp;componentName=commandbutton&amp;componentUseCase=navigation&amp;foo=1234"
+					ajax="#{commandBackingBean.ajax}">
 					<alloy:icon name="arrow-left" />
 					<alloy:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
 				</alloy:commandButton>
