--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/general/commandLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/general/commandLink.xhtml
@@ -1,11 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-2col.xhtml">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
+	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Styling via children -->
 		<alloy:form>
-			<showcase:example description="#{i18n['alloy-commandlink-general-example-1']}" number="1" renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-commandlink-general-example-1']}" number="1"
+				renderedCheckbox="true">
 				<alloy:commandLink rendered="#{showcaseModelBean.selectedComponent.rendered}">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['text-for-a-link']} " />
