--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/navigation/commandLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/navigation/commandLink.xhtml
@@ -1,18 +1,26 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
-	template="/templates/component-1col-60.xhtml">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-1col-60.xhtml">
 
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
+				<alloy:field label="#{i18n['ajax']}">
+					<alloy:selectOneMenu value="#{commandBackingBean.ajax}">
+						<f:selectItem itemLabel="true" itemValue="true" />
+						<f:selectItem itemLabel="false" itemValue="false" />
+						<f:ajax render="nav" />
+					</alloy:selectOneMenu>
+				</alloy:field>
 				<!-- Navigation based on outcome of navigation-case defined in navigation-rule.xml -->
-				<alloy:commandLink action="toParam">
+				<alloy:commandLink id="nav" action="toParam" ajax="#{commandBackingBean.ajax}">
 					<alloy:outputText value="#{i18n['to-param-page']} " />
 					<alloy:icon name="arrow-right" />
 				</alloy:commandLink>
 			</showcase:example>
 			<showcase:outputParameter>
-				<alloy:outputText id="parameterValue" value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
+				<alloy:outputText id="parameterValue"
+					value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
 			</showcase:outputParameter>
 		</alloy:form>
 	</ui:define>
