--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/general/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/general/commandButton.xhtml
@@ -1,11 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/templates/component-3col.xhtml">
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Styling via children -->
 		<alloy:form>
-			<showcase:example description="#{i18n['alloy-commandbutton-general-example-1']}" number="1" renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-commandbutton-general-example-1']}" number="1"
+				renderedCheckbox="true">
 				<alloy:commandButton rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['Button']} " />
@@ -18,7 +19,8 @@
 	<ui:define name="col2">
 		<!-- Example 2: Styling via image attribute -->
 		<alloy:form>
-			<showcase:example description="#{i18n['alloy-commandbutton-general-example-2']}" number="2" renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-commandbutton-general-example-2']}" number="2"
+				renderedCheckbox="true">
 				<alloy:commandButton image="/resources/images/liferay-faces-logo-small.png"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234" />
 			</showcase:example>
@@ -29,7 +31,8 @@
 		<!-- Example#3: Styling via value attribute (Note: This can only be used if the component does not have any -->
 		<!-- children and the component does not specify an image) -->
 		<alloy:form>
-			<showcase:example description="#{i18n['alloy-commandbutton-general-example-3']}" number="3" renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-commandbutton-general-example-3']}" number="3"
+				renderedCheckbox="true">
 				<alloy:commandButton rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234" />
 			</showcase:example>
 		</alloy:form>
