FACES-2008 Develop alloy:paginator (added automatic ajax for pagination controls) FACES-1943 Develop alloy:dataTable (added automatic ajax for column sort controls)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/lazy/dataTable.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/lazy/dataTable.xhtml
@@ -11,9 +11,7 @@
 					var="customer">
 					<f:facet name="header">
 						<alloy:outputText value="#{i18n['customers']}" />
-						<alloy:paginator>
-							<f:ajax execute="@form" render="@form" />
-						</alloy:paginator>
+						<alloy:paginator />
 					</f:facet>
 					<alloy:column headerText="#{i18n['first-name']}">
 						<alloy:outputText value="#{customer.firstName}" />
