--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/server-events/dataTable.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/server-events/dataTable.xhtml
@@ -27,9 +27,7 @@
 					<f:ajax event="rowSelectRange" render=":exampleForm:example:feedback" />
 					<f:facet name="header">
 						<alloy:outputText value="#{i18n['customers']}" />
-						<alloy:paginator>
-							<f:ajax execute="customers @this" render="customers" />
-						</alloy:paginator>
+						<alloy:paginator />
 					</f:facet>
 					<alloy:column headerText="#{i18n['first-name']}">
 						<alloy:outputText value="#{customer.firstName}" />
