FACES-2005 Develop alloy:video component FACES-2034 Develop alloy:audio component (Changed examples.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/alternate-formats/audio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/alternate-formats/audio.xhtml
@@ -5,11 +5,11 @@
 	<ui:define name="col1">
 		<showcase:example description="#{i18n['alloy-audio-alternate-formats-example-1']}" number="1">
 			<alloy:audio styleClass="showcase-audio" controls="true">
-				<alloy:resource library="audios" name="example.mp3" />
-				<alloy:resource library="audios" name="example.wav" />
-				<alloy:resource library="audios" name="example.m4a" />
-				<alloy:resource library="audios" name="example.webm" />
-				<alloy:resource library="audios" name="example.ogg" />
+				<alloy:resource library="audios" name="over-the-rainbow.mp3" />
+				<alloy:resource library="audios" name="over-the-rainbow.wav" />
+				<alloy:resource library="audios" name="over-the-rainbow.m4a" />
+				<alloy:resource library="audios" name="over-the-rainbow.webm" />
+				<alloy:resource library="audios" name="over-the-rainbow.ogg" />
 			</alloy:audio>
 		</showcase:example>
 	</ui:define>
