--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/html5-passthrough/audio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/html5-passthrough/audio.xhtml
@@ -4,7 +4,7 @@
 
 	<ui:define name="col1">
 		<showcase:example>
-			<audio jsf:library="audios" jsf:name="example.mp3" class="showcase-audio" controls="true" />
+			<audio jsf:library="audios" jsf:name="over-the-rainbow.mp3" class="showcase-audio" controls="true" />
 		</showcase:example>
 	</ui:define>
 
