--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/alternate-formats/video.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/alternate-formats/video.xhtml
@@ -5,9 +5,9 @@
 	<ui:define name="col1">
 		<showcase:example description="#{i18n['alloy-video-alternate-formats-example-1']}" number="1">
 			<alloy:video styleClass="showcase-video" controls="true">
-				<alloy:resource library="videos" name="example.mp4" />
-				<alloy:resource library="videos" name="example.webm" />
-				<alloy:resource library="videos" name="example.ogv" />
+				<alloy:resource library="videos" name="over-the-rainbow.mp4" />
+				<alloy:resource library="videos" name="over-the-rainbow.webm" />
+				<alloy:resource library="videos" name="over-the-rainbow.ogv" />
 			</alloy:video>
 		</showcase:example>
 	</ui:define>
