--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/general/audio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/general/audio.xhtml
@@ -7,7 +7,7 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-audio-general-example-1']}" number="1" renderedCheckbox="true">
 				<alloy:audio styleClass="showcase-audio" contentType="audio/mp3" controls="true"
-					value="/resources/audios/example.mp3" rendered="#{showcaseModelBean.selectedComponent.rendered}" />
+					value="/resources/audios/over-the-rainbow.mp3" rendered="#{showcaseModelBean.selectedComponent.rendered}" />
 			</showcase:example>
 		</alloy:form>
 	</ui:define>
@@ -16,7 +16,7 @@
 	<ui:define name="col2">
 		<showcase:example description="#{i18n['alloy-audio-general-example-2']}" number="2">
 			<alloy:audio styleClass="showcase-audio" contentType="audio/ogg"
-				controls="true" degrade="false" value="#{resource['audios:example.ogg']}">
+				controls="true" degrade="false" value="#{resource['audios:over-the-rainbow.ogg']}">
 				<alloy:outputText value="#{i18n['please-visit-this-website-with-an-up-to-date-browser']}" />
 			</alloy:audio>
 		</showcase:example>
@@ -35,7 +35,7 @@
 	<!-- Example 4: JSF resource via the library and name attributes -->
 	<ui:define name="col4">
 		<showcase:example description="#{i18n['alloy-audio-general-example-4']}" number="4">
-			<alloy:audio styleClass="showcase-audio" controls="true" degrade="false" library="audios" name="example.ogg">
+			<alloy:audio styleClass="showcase-audio" controls="true" degrade="false" library="audios" name="over-the-rainbow.ogg">
 				<alloy:outputText value="#{i18n['please-visit-this-website-with-an-up-to-date-browser']}" />
 			</alloy:audio>
 		</showcase:example>
