--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/graceful-degradation/audio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/audio/graceful-degradation/audio.xhtml
@@ -6,7 +6,7 @@
 		<showcase:example description="#{i18n['alloy-audio-graceful-degradation-example-1']}" number="1">
 			<alloy:audio styleClass="showcase-audio" contentType="audio/mp3" controls="true"
 				flashPlayer="#{resource['liferay-faces-alloy:aui/audio/player.swf']}"
-				value="#{resource['audios:example.mp3']}">
+				value="#{resource['audios:over-the-rainbow.mp3']}">
 				<f:facet name="flash">
 					<param name="flashVars" value="mp3=#{audioBacking.encodedMp3ResourceURL}" />
 				</f:facet>
