--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/graceful-degradation/video.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/graceful-degradation/video.xhtml
@@ -6,7 +6,7 @@
 		<showcase:example description="#{i18n['alloy-video-graceful-degradation-example-1']}" number="1">
 			<alloy:video styleClass="showcase-video" contentType="video/mp4" controls="true"
 				flashPlayer="#{resource['liferay-faces-alloy:aui/video/player.swf']}"
-				value="#{resource['videos:example.mp4']}">
+				value="#{resource['videos:over-the-rainbow.mp4']}">
 				<f:facet name="flash">
 					<param name="flashVars" value="controls=true&amp;src=#{videoBacking.encodedMp4ResourceURL}" />
 				</f:facet>
