--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/html5-passthrough/video.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/video/html5-passthrough/video.xhtml
@@ -4,7 +4,7 @@
 
 	<ui:define name="col1">
 		<showcase:example>
-			<video jsf:library="videos" jsf:name="example.mp4" controls="true" height="312" width="500" />
+			<video jsf:library="videos" jsf:name="over-the-rainbow.mp4" controls="true" height="312" width="500" />
 		</showcase:example>
 	</ui:define>
 
