FACES-2103 Upgrade Richfaces demos to 4.5.4.Final (revert file that was accidentally committed)

--- a/demos/bridge/liferayfaces3-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/liferayfaces3-portlet/src/main/webapp/views/applicant.xhtml
@@ -149,7 +149,7 @@
                     <alloy:form id="f3" enctype="multipart/form-data">
                         <alloy:inputFile fileUploadListener="#{applicantBackingBean.handleFileUpload}"
 							multiple="multiple" />
-                        <alloy:commandButton render=":c2a" value="#{i18n['submit']}" />
+                        <alloy:commandButton render="c2a" value="#{i18n['submit']}" />
                     </alloy:form>
                 </alloy:column>
             </alloy:row>
