FACES-2200 Unable to upload files with f:ajax with alloy:commandButton and JSF 2.1

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/preview/inputFile.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/preview/inputFile.xhtml
@@ -9,7 +9,7 @@
 					showPreview="true">
 				</alloy:inputFile>
 				<hr />
-				<alloy:commandButton render="@form" value="#{i18n['submit']}" />
+				<alloy:commandButton ajax="false" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:include src="../inputFileCommon.xhtml" />
