--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/validation/inputFile.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/validation/inputFile.xhtml
@@ -11,7 +11,7 @@
 					<alloy:validateFile contentTypes="application/pdf,image/png" maxFileSize="600000" />
 				</alloy:inputFile>
 				<hr />
-				<alloy:commandButton render="@form" value="#{i18n['submit']}" />
+				<alloy:commandButton ajax="false" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:include src="../inputFileCommon.xhtml" />
