--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/multiple/inputFile.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/multiple/inputFile.xhtml
@@ -7,7 +7,7 @@
 			<showcase:example>
 				<alloy:inputFile fileUploadListener="#{inputFileBackingBean.handleFileUpload}" multiple="multiple" />
 				<hr />
-				<alloy:commandButton render="@form" value="#{i18n['submit']}" />
+				<alloy:commandButton ajax="false" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:include src="../inputFileCommon.xhtml" />
